js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-with-expression-no-new-call-expression-prop-access.js







































$DONOTEVALUATE();

with (new import('').prop) {}
